[package]
name = "wallshifter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = "0.14.20"
# tokio = "1"
#reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12"
# select = "0.5.0"